# docs/swagger.yaml
@@ -1,5 +1,66 @@
 basePath: /api/v1
 definitions:
+  github_com_savioruz_bake_internal_domain_entity.Address:
+    properties:
+      address_line:
+        type: string
+      city:
+        type: string
+      country:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      postal_code:
+        type: string
+      state:
+        type: string
+      updated_at:
+        type: string
+      user:
+        $ref: '#/definitions/github_com_savioruz_bake_internal_domain_entity.User'
+      user_id:
+        type: string
+    type: object
+  github_com_savioruz_bake_internal_domain_entity.Product:
+    properties:
+      created_at:
+        type: string
+      description:
+        type: string
+      id:
+        type: string
+      image:
+        type: string
+      name:
+        type: string
+      price:
+        type: number
+      stock:
+        type: integer
+      updated_at:
+        type: string
+    type: object
+  github_com_savioruz_bake_internal_domain_entity.User:
+    properties:
+      created_at:
+        type: string
+      email:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+      phone:
+        type: string
+      role:
+        type: string
+      updated_at:
+        type: string
+    type: object
   github_com_savioruz_bake_internal_domain_model.AddressRequest:
     properties:
       address_line:
@@ -50,6 +111,20 @@ definitions:
       user_id:
         type: string
     type: object
+  github_com_savioruz_bake_internal_domain_model.CreateOrderRequest:
+    properties:
+      product_id:
+        type: string
+      quantity:
+        minimum: 1
+        type: integer
+      user_id:
+        type: string
+    required:
+    - product_id
+    - quantity
+    - user_id
+    type: object
   github_com_savioruz_bake_internal_domain_model.CreateProductRequest:
     properties:
       description:
@@ -88,6 +163,31 @@ definitions:
         additionalProperties: true
         type: object
     type: object
+  github_com_savioruz_bake_internal_domain_model.OrderResponse:
+    properties:
+      address:
+        $ref: '#/definitions/github_com_savioruz_bake_internal_domain_entity.Address'
+      address_id:
+        type: string
+      created_at:
+        type: string
+      id:
+        type: string
+      product:
+        $ref: '#/definitions/github_com_savioruz_bake_internal_domain_entity.Product'
+      product_id:
+        type: string
+      quantity:
+        type: integer
+      status:
+        type: string
+      total_price:
+        type: number
+      updated_at:
+        type: string
+      user_id:
+        type: string
+    type: object
   github_com_savioruz_bake_internal_domain_model.Paginate:
     properties:
       limit:
@@ -125,6 +225,15 @@ definitions:
     required:
     - refresh_token
     type: object
+  ? github_com_savioruz_bake_internal_domain_model.SuccessResponse-array_github_com_savioruz_bake_internal_domain_model_OrderResponse
+  : properties:
+      data:
+        items:
+          $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.OrderResponse'
+        type: array
+      paginate:
+        $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.Paginate'
+    type: object
   ? github_com_savioruz_bake_internal_domain_model.SuccessResponse-array_github_com_savioruz_bake_internal_domain_model_ProductResponse
   : properties:
       data:
@@ -138,6 +247,13 @@ definitions:
   : properties:
       data:
         $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.DeleteProductRequest'
+      paginate:
+        $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.Paginate'
+    type: object
+  github_com_savioruz_bake_internal_domain_model.SuccessResponse-github_com_savioruz_bake_internal_domain_model_OrderResponse:
+    properties:
+      data:
+        $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.OrderResponse'
       paginate:
         $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.Paginate'
     type: object
@@ -259,6 +375,127 @@ info:
   title: Bake API
   version: "0.1"
 paths:
+  /orders:
+    get:
+      consumes:
+      - application/json
+      description: Get all orders
+      parameters:
+      - description: Page
+        in: query
+        name: page
+        type: integer
+      - description: Limit
+        in: query
+        name: limit
+        type: integer
+      - description: Sort
+        enum:
+        - id
+        - user_id
+        - product_id
+        - address_id
+        - quantity
+        - total_price
+        - status
+        - created_at
+        - updated_at
+        in: query
+        name: sort
+        type: string
+      - description: Order
+        enum:
+        - ASC
+        - DESC
+        in: query
+        name: order
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.SuccessResponse-array_github_com_savioruz_bake_internal_domain_model_OrderResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get all orders
+      tags:
+      - orders
+    post:
+      consumes:
+      - application/json
+      description: Create a new order
+      parameters:
+      - description: Order
+        in: body
+        name: order
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.CreateOrderRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.SuccessResponse-github_com_savioruz_bake_internal_domain_model_OrderResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Create a new order
+      tags:
+      - orders
+  /orders/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get order by ID
+      parameters:
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.SuccessResponse-github_com_savioruz_bake_internal_domain_model_OrderResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_savioruz_bake_internal_domain_model.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get order by ID
+      tags:
+      - orders
   /products:
     get:
       consumes:
@@ -274,12 +511,24 @@ paths:
         name: limit
         type: integer
       - description: Sort
+        enum:
+        - id
+        - name
+        - description
+        - price
+        - stock
+        - image
+        - created_at
+        - updated_at
         in: query
         name: sort
         type: string
-      - description: Sort By
+      - description: Order
+        enum:
+        - ASC
+        - DESC
         in: query
-        name: sort_by
+        name: order
         type: string
       produces:
       - application/json
@@ -464,12 +713,24 @@ paths:
         name: limit
         type: integer
       - description: Sort
+        enum:
+        - id
+        - name
+        - description
+        - price
+        - stock
+        - image
+        - created_at
+        - updated_at
         in: query
         name: sort
         type: string
-      - description: Sort By
+      - description: Order
+        enum:
+        - ASC
+        - DESC
         in: query
-        name: sort_by
+        name: order
         type: string
       produces:
       - application/json
